--- a/Discussions.tex
+++ b/Discussions.tex
@@ -7,9 +7,10 @@ Our model, based on the strong-coupling limit, is well justified for Mott insula
 
 Why has strong SOC in \CRO eluded detection for more than two decades? The fact that INS data has been unavailable until now partly accounts for it, but, in retrospect, it should have been noticed from the large canting angle of the magnetic moment, evident from the net ferromagnetic moment of ($\sim$ 0.3 $\mu_{\mathrm{B}}$/Ru) in the metamagnetic state above a moderate magnetic field of $\approx7$ T. The magnetic structure is very similar to that of Sr$_2$IrO$_4$, in which strong SOC rigidly fixes the magnetic moment with respect to the IrO$_6$ octahedra, and canted moments result from the octahedra rotation. However, as we have seen, the manifestion of SOC is \CRO is quite distinct from that in any of the known 5$d$ TMO; for example, Heisenberg antiferromagnet Sr$_2$IrO$_4$,  Ising-like Sr$_3$Ir$_2$O$_7$, or Na$_2$IrO$_3$ with dominant bond-directional magnetic coupling. It is also different from 3$d$ TMO such as cobaltates or ferrites, where SOC results in exotic non-collinear magnetic structures.
   
-Conceptually, one may find a useful analogy to the magnetic field driven QCPs in dimer systems, such as TlCuCl$_3$ (ref.\cite{R_egg_2003}). In these systems, a similar singlet-triplet structure is realized from a pairs of spins on each dimer, and the description of its QCP follows a similar formalism as treated here. In fact, the amplitude modes in \CRO and the dimer systems are both condensed-matter realizations of the Higgs mode, an elementary particle in the Standard Model, exemplifying universality of the fundamental laws of nature replicated across different settings over different energy scales. \CRO extends the few Kelvin, meV scale physics of dimer systems to a room-temperature scale, which means robust quantum effects that may be exploited for practical applications. Although such a large energy scale QCP cannot be tuned by laboratory-scale magnetic fields, ruthenates offer an alternative means of tuning via the crystal electric fields. Moreover, the singlet-triplet structure realized within a single ion removes the stringent requirement of dimer structure in the crystal lattice and thus has a wider applicability for transition-metal compounds containing 4$d$ ions with the low-spin $d^4$ configuration.
+Conceptually, one may find a useful analogy to the magnetic field driven QCPs in dimer systems, such as TlCuCl$_3$ (ref.\cite{R_egg_2003}). In these systems, a similar singlet-triplet structure is realized from a pairs of spins on each dimer, and the description of its QCP follows a similar formalism as treated here. In fact, the amplitude modes in \CRO and the dimer systems are both condensed-matter realizations of the Higgs mode\cite{Aad20121}, an elementary particle in the Standard Model, exemplifying universality of the fundamental laws of nature replicated across different settings over different energy scales. \CRO extends the few Kelvin, meV scale physics of dimer systems to a room-temperature scale, which means robust quantum effects that may be exploited for practical applications. Although such a large energy scale QCP cannot be tuned by laboratory-scale magnetic fields, ruthenates offer an alternative means of tuning via the crystal electric fields. Moreover, the singlet-triplet structure realized within a single ion removes the stringent requirement of dimer structure in the crystal lattice and thus has a wider applicability for transition-metal compounds containing 4$d$ ions with the low-spin $d^4$ configuration.
   
 Finally, we remark that the unique manifestation of SOC demonstrated herein is not limited to \CROns, but should be widely visible in other ruthenates. Given that interpretations of ruthenates have largely been based on neglecting the vital role of SOC, our work calls for reinvestigation of the distinct correlated electron phenomena in 4$d$ TMO, such as the orbital ordering transition in La$_4$Ru$_2$O$_{10}$ and the spin-one Haldane gap in Tl$_2$Ru$_2$O$_7$.
+  
   
   
   
