added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -364,3 +364,18 @@
   title = {{Quantum Magnets under Pressure: Controlling Elementary Excitations in   {TlCuCl} 3}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Endres_2012,
+  doi = {10.1038/nature11255},
+  url = {http://dx.doi.org/10.1038/nature11255},
+  year = {2012},
+  month = {jul},
+  publisher = {Nature Publishing Group},
+  volume = {487},
+  number = {7408},
+  pages = {454--458},
+  author = {Manuel Endres and Takeshi Fukuhara and David Pekker and Marc Cheneau and Peter Schau$\upbeta$ and Christian Gross and Eugene Demler and Stefan Kuhr and Immanuel Bloch},
+  title = {{The `Higgs' amplitude mode at the two-dimensional superfluid/Mott insulator transition}},
+  journal = {Nature},
+}
