added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -379,3 +379,17 @@
   title = {{The `Higgs' amplitude mode at the two-dimensional superfluid/Mott insulator transition}},
   journal = {Nature},
 }
+
+
+@article{Pollet_2012,
+  doi = {10.1103/physrevlett.109.010401},
+  url = {http://dx.doi.org/10.1103/physrevlett.109.010401},
+  year = {2012},
+  month = {jul},
+  publisher = {American Physical Society ({APS})},
+  volume = {109},
+  number = {1},
+  author = {L. Pollet and N. Prokof'ev},
+  title = {{Higgs Mode in a Two-Dimensional Superfluid}},
+  journal = {Phys. Rev. Lett.},
+}
