added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -393,3 +393,18 @@
   title = {{Higgs Mode in a Two-Dimensional Superfluid}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Khalifah_2002,
+  doi = {10.1126/science.1075556},
+  url = {http://dx.doi.org/10.1126/science.1075556},
+  year = {2002},
+  month = {sep},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {297},
+  number = {5590},
+  pages = {2237--2240},
+  author = {P. Khalifah},
+  title = {{Orbital Ordering Transition in La4Ru2O10}},
+  journal = {Science},
+}
