added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -408,3 +408,18 @@
   title = {{Orbital Ordering Transition in La4Ru2O10}},
   journal = {Science},
 }
+
+
+@article{Lee_2006,
+  doi = {10.1038/nmat1605},
+  url = {http://dx.doi.org/10.1038/nmat1605},
+  year = {2006},
+  month = {may},
+  publisher = {Nature Publishing Group},
+  volume = {5},
+  number = {6},
+  pages = {471--476},
+  author = {Seongsu Lee and J.-G. Park and D. T. Adroja and D. Khomskii and S. Streltsov and K. A. McEwen and H. Sakai and K. Yoshimura and V. I. Anisimov and D. Mori and R. Kanno and R. Ibberson},
+  title = {{Spin gap in Tl2Ru2O7 and the possible formation of Haldane chains in three-dimensional crystals}},
+  journal = {Nature Materials},
+}
