--- a/Discussions.tex
+++ b/Discussions.tex
@@ -9,7 +9,8 @@ Why has strong SOC in \CRO eluded detection for more than two decades? The fact 
   
 Conceptually, one may find a useful analogy to the magnetic field driven QCPs in dimer systems, such as TlCuCl$_3$ (ref.\cite{R_egg_2003}). In these systems, a similar singlet-triplet structure is realized from a pairs of spins on each dimer, and the description of its QCP follows a similar formalism as treated here. In fact, the amplitude modes in \CRO and the dimer systems \cite{R_egg_2008}are both condensed-matter realizations of the Higgs mode\cite{Endres_2012,Pollet_2012}, an elementary particle in the Standard Model, exemplifying universality of the fundamental laws of nature replicated across different settings over different energy scales. \CRO extends the few Kelvin, meV scale physics of dimer systems to a room-temperature scale, which means robust quantum effects that may be exploited for practical applications. Although such a large energy scale QCP cannot be tuned by laboratory-scale magnetic fields, ruthenates offer an alternative means of tuning via the crystal electric fields. Moreover, the singlet-triplet structure realized within a single ion removes the stringent requirement of dimer structure in the crystal lattice and thus has a wider applicability for transition-metal compounds containing 4$d$ ions with the low-spin $d^4$ configuration.
   
-Finally, we remark that the unique manifestation of SOC demonstrated herein is not limited to \CROns, but should be widely visible in other ruthenates. Given that interpretations of ruthenates have largely been based on neglecting the vital role of SOC, our work calls for reinvestigation of the distinct correlated electron phenomena in 4$d$ TMO, such as the orbital ordering transition in La$_4$Ru$_2$O$_{10}$ and the spin-one Haldane gap in Tl$_2$Ru$_2$O$_7$.
+Finally, we remark that the unique manifestation of SOC demonstrated herein is not limited to \CROns, but should be widely visible in other ruthenates. Given that interpretations of ruthenates have largely been based on neglecting the vital role of SOC, our work calls for reinvestigation of the distinct correlated electron phenomena in 4$d$ TMO, such as the orbital ordering transition in La$_4$Ru$_2$O$_{10}$ (ref.\cite{Khalifah_2002}) and the spin-one Haldane gap in Tl$_2$Ru$_2$O$_7$ (ref.\cite{Lee_2006} ).
+  
   
   
   
