added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -423,3 +423,18 @@
   title = {{Spin gap in Tl2Ru2O7 and the possible formation of Haldane chains in three-dimensional crystals}},
   journal = {Nature Materials},
 }
+
+
+@article{Hwan_Chun_2015,
+  doi = {10.1038/nphys3322},
+  url = {http://dx.doi.org/10.1038/nphys3322},
+  year = {2015},
+  month = {may},
+  publisher = {Nature Publishing Group},
+  volume = {11},
+  number = {6},
+  pages = {462--466},
+  author = {Sae Hwan Chun and Jong-Woo Kim and Jungho Kim and H. Zheng and Constantinos~C. Stoumpos and C.~D. Malliakas and J.~F. Mitchell and Kavita Mehlawat and Yogesh Singh and Y. Choi and T. Gog and A. Al-Zein and M.~Moretti Sala and M. Krisch and J. Chaloupka and G. Jackeli and G. Khaliullin and B. J. Kim},
+  title = {{Direct evidence for dominant bond-directional interactions in a honeycomb lattice iridate Na2IrO3}},
+  journal = {Nat Phys},
+}
