--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -438,3 +438,18 @@
   title = {{Direct evidence for dominant bond-directional interactions in a honeycomb lattice iridate Na2IrO3}},
   journal = {Nat Phys},
 }
+
+
+@article{Han_2012,
+  doi = {10.1038/nature11659},
+  url = {http://dx.doi.org/10.1038/nature11659},
+  year = {2012},
+  month = {dec},
+  publisher = {Nature Publishing Group},
+  volume = {492},
+  number = {7429},
+  pages = {406--410},
+  author = {Tian-Heng Han and Joel S. Helton and Shaoyan Chu and Daniel G. Nocera and Jose A. Rodriguez-Rivera and Collin Broholm and Young S. Lee},
+  title = {{Fractionalized excitations in the spin-liquid state of a kagome-lattice antiferromagnet}},
+  journal = {Nature},
+}
