added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -453,3 +453,17 @@
   title = {{Fractionalized excitations in the spin-liquid state of a kagome-lattice antiferromagnet}},
   journal = {Nature},
 }
+
+
+@article{Sachdev_2011,
+  doi = {10.1063/1.3554314},
+  url = {http://dx.doi.org/10.1063/1.3554314},
+  year = {2011},
+  publisher = {{AIP} Publishing},
+  volume = {64},
+  number = {2},
+  pages = {29},
+  author = {Subir Sachdev and Bernhard Keimer},
+  title = {{Quantum criticality}},
+  journal = {Phys. Today},
+}
