added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -467,3 +467,18 @@
   title = {{Quantum criticality}},
   journal = {Phys. Today},
 }
+
+
+@article{Balents_2010,
+  doi = {10.1038/nature08917},
+  url = {http://dx.doi.org/10.1038/nature08917},
+  year = {2010},
+  month = {mar},
+  publisher = {Nature Publishing Group},
+  volume = {464},
+  number = {7286},
+  pages = {199--208},
+  author = {Leon Balents},
+  title = {{Spin liquids in frustrated magnets}},
+  journal = {Nature},
+}
