added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -482,3 +482,17 @@
   title = {{Spin liquids in frustrated magnets}},
   journal = {Nature},
 }
+
+
+@article{2004,
+  doi = {10.1016/s1369-7021(04)00513-9},
+  url = {http://dx.doi.org/10.1016/s1369-7021(04)00513-9},
+  year = {2004},
+  month = {nov},
+  publisher = {Elsevier {BV}},
+  volume = {7},
+  number = {11},
+  pages = {63},
+  title = {{Physics of transition metal oxides}},
+  journal = {Materials Today},
+}
