--- a/vspace_20_pt_noindent_bf__.tex
+++ b/vspace_20_pt_noindent_bf__.tex
@@ -50,7 +50,7 @@ time-of-flight experiment on Si plates and augmented it with further crystals
 to obtain a total sample mass of $\sim$3~g.
 %
 The mosaicity of this sample was $\lesssim$3.2$^\circ$ and 
-$\lesssim$2.6$^\circ$ for in-plane and $c$-sxis, respectively.
+$\lesssim$2.6$^\circ$ for in-plane and $c$-axis, respectively.
 %
 The experiment was performed on the IN20 three-axis-spectrometer installed on
 the H13 thermal beam tube at the Institut Laue-Langevin, Grenoble, France. For
