--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,3 +1,22 @@
+@article{braden98aps,
+  title = {Crystal and magnetic structure of ${\mathrm{Ca}}_{2}{\mathrm{RuO}}_{4}:$ Magnetoelastic coupling and the metal-insulator transition},
+  author = {Braden, M. and Andr\'e, G. and Nakatsuji, S. and Maeno, Y.},
+  journal = {Phys. Rev. B},
+  volume = {58},
+  issue = {2},
+  pages = {847--861},
+  numpages = {0},
+  year = {1998},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.58.847},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.58.847}
+}
+
+
+
+
+
 @article{Witczak_Krempa_2014,
   doi = {10.1146/annurev-conmatphys-020911-125138},
   url = {http://dx.doi.org/10.1146/annurev-conmatphys-020911-125138},
