--- a/vspace_20_pt_noindent_bf__.tex
+++ b/vspace_20_pt_noindent_bf__.tex
@@ -13,7 +13,7 @@ Single crystals of \CRO were grown by the floating zone method with RuO$_{2}$
 self-flux~\cite{Nakatsuji97,Cao97}. The crystals had lattice parameter
 $a$=5.415~\r{A}, $b$=5.512~\r{A}, and $c$=11.944~\r{A}, as determined by x-ray
 powder diffraction, in good agreement with the parameters reported in
-literature\cite{} for the ``S'' phase with short $c$-axis lattice parameter.
+literature\cite{braden98aps} for the ``S'' phase with short $c$-axis lattice parameter.
 The magnetic ordering temperature T=110~K was determined using magnetization
 measurements in a Quantum Design SQUID-VSM device.
 
