added Schaerpf_1993 for xyz-difference method

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,3 +1,18 @@
+@article {Schaerpf_1993,
+author = {Schärpf, O. and Capellmann, H.},
+title = {The XYZ-Difference Method with Polarized Neutrons and the Separation of Coherent, Spin Incoherent, and Magnetic Scattering Cross Sections in a Multidetector},
+journal = {physica status solidi (a)},
+volume = {135},
+number = {2},
+publisher = {WILEY-VCH Verlag},
+issn = {1521-396X},
+url = {http://dx.doi.org/10.1002/pssa.2211350204},
+doi = {10.1002/pssa.2211350204},
+pages = {359--379},
+year = {1993},
+}
+
+
 @article{Witczak_Krempa_2014,
   doi = {10.1146/annurev-conmatphys-020911-125138},
   url = {http://dx.doi.org/10.1146/annurev-conmatphys-020911-125138},
