--- a/vspace_20_pt_noindent_bf__.tex
+++ b/vspace_20_pt_noindent_bf__.tex
@@ -82,7 +82,7 @@ into spin-flip and non-spin-flip channels.
 
 \noindent
 The magnetic double differential cross section for each channel is given by
-\cite{schaerpf}
+\cite{Schaerpf_1993}
 %
 \begin{equation}
   \left(\frac{\partial^2\sigma}{\partial \Omega \partial E'}\right)_{ss'}^{i}
@@ -98,7 +98,7 @@ magnetic moment. The symbol $\Gamma_{ss'}^{i}(\vec{r},\omega)$ stands for all
 matrix elements $M_{ii}(\vec{r},\omega)$, that contribute for the respective
 channel. We here reproduce an incomplete listing of these functions, that
 captures all the effects needed to describe our experiment. For a more complete
-overview see \cite{schaerpf}
+overview see \cite{Schaerpf_1993}
 %
 \begin{equation}
   \begin{pmatrix}
