update INS polINS & pol xyz analysis

--- a/vspace_20_pt_noindent_bf__.tex
+++ b/vspace_20_pt_noindent_bf__.tex
@@ -58,7 +58,7 @@ the $xyz$~polarization analysis, we used a Heusler (111) monochromator as well
 as a Heusler (111) analysator in combination with the Helmholtz coil at the
 sample position.
 %
-Throughout the experiment we used a fixed $k_F$=X\r{A}$^{-1}$ and performed
+Throughout the experiment we used a fixed $k_F$=2.663\r{A}$^{-1}$ and performed
 polarization analysis along energy and H scans at ($\pi$,$\pi$) and (0,0),
 keeping L as small as possible without violating the kinematic restrictions.
 
